Verificacion de las Tablas. Falta el Delete

--- a/SistemaClinica.BackEnd.API/appsettings.json
+++ b/SistemaClinica.BackEnd.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "CnxSqlServer": "Server=DESKTOP-A6B0DKK;Database=Clinica; Integrated Security=true;"
+    //"CnxSqlServer": "Server=meetin-server.database.windows.net;Database=meetin-db; Integrated Security=false;User ID=dbadmin;Password=Admin123$;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
